cluster-infra/master/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-class-cilium
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  controllerName: io.cilium/gateway-controller
