cluster-infra/master/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multicluster-gateway
spec:
  gatewayClassName: gateway-class-cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multicluster-route
spec:
  parentRefs:
  - name: multicluster-gateway
  rules:
  - backendRefs:
    - name: cilium-global-service
      port: 80
